bug removed: no scroll on firefox

--- a/c/programs/textEditor/text/prism2.css
+++ b/c/programs/textEditor/text/prism2.css
@@ -47,6 +47,6 @@
 }
 
 #editing {
-  white-space: nowrap;
+  white-space: pre;
   overflow: auto;
 }
